# HammockEngine

./: .gitignore  CMakeLists.txt  HammockEngine.sln  README.md  vcpkg.json
HammockEngine/: FirstApp.cpp  FirstApp.h  HammockEngine.vcxproj  HammockEngine.vcxproj.filters  HmckBuffer.cpp  HmckBuffer.h  HmckCamera.cpp  HmckCamera.h  HmckDescriptors.cpp  HmckDescriptors.h  HmckDevice.h  HmckFrameInfo.h  HmckGameObject.cpp  HmckGameObject.h  HmckLights.cpp  HmckModel.cpp  HmckModel.h  HmckPipeline.cpp  (+19 more)
examples/apps/: CMakeLists.txt  IApp.h  PBRApp.cpp  PBRApp.h  VolumeApp.cpp  VolumeApp.h  main.cpp
examples/cloud_renderer/: BoundingBox.h  CMakeLists.txt  CloudRenderer.cpp  CloudRenderer.h  IScene.h  Noise3D.h  PerlinNoise3D.cpp  PerlinNoise3D.h  SignedDistanceField.h  main.cpp
examples/cloud_renderer/scenes/: CloudBoundingBoxTestScene.cpp  CloudBoundingBoxTestScene.h  IScene.h  NoiseEditor.cpp  NoiseEditor.h  ParticipatingMediumTestScene.cpp  ParticipatingMediumTestScene.h  SkyScene.cpp  SkyScene.h
examples/marching_cubes/: CMakeLists.txt  MarchingCubes.h  Particle.h  Renderer.cpp  Renderer.h  main.cpp
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  CloudsApp.cpp  CloudsApp.h  IApp.h  KeyboardMovementController.h  PBRApp.cpp  PBRApp.h  RaymarchingDemoApp.cpp  RaymarchingDemoApp.h  VolumeApp.cpp  VolumeApp.h
src/app/controllers/: KeyboardMovementController.cpp  OrbitalCameraController.cpp  OrbitalCameraController.h  OrbitalMovementController.cpp  OrbitalMovementController.h
src/engine/: CMakeLists.txt  HmckBuffer.h  HmckCamera.cpp  HmckCamera.h  HmckDescriptors.cpp  HmckDescriptors.h  HmckDevice.cpp  HmckDevice.h  HmckEntity.h  HmckEntity3D.h  HmckEntityComponents.h  HmckFramebuffer.h  HmckGLTF.cpp  HmckGLTF.h  HmckHDR.cpp  HmckHDR.h  HmckLights.cpp  HmckLights.h  HmckMemory.cpp  HmckMemory.h  HmckPipeline.cpp  HmckPipeline.h  HmckRTX.cpp  HmckRTX.h  HmckRenderer.cpp  HmckRenderer.h  HmckScene.cpp  HmckScene.h  HmckSwapChain.cpp  HmckSwapChain.h  HmckTexture.cpp  HmckTexture.h  HmckThreadPool.h  HmckUtils.h  HmckVertex.h
src/engine/controllers/: KeyboardMovementController.cpp  KeyboardMovementController.h
src/engine/core/: HmckBindingTypes.h  HmckDevice.cpp  HmckDevice.h  HmckDeviceStorage.cpp  HmckDeviceStorage.h  HmckFramebuffer.h  HmckGraphicsPipeline.cpp  HmckMemory.cpp  HmckMemory.h  HmckPipeline.cpp  HmckPipeline.h  HmckRTX.cpp  HmckRTX.h  HmckRenderContext.cpp  HmckRenderContext.h  HmckRenderer.cpp  HmckRenderer.h  HmckResourceManager.cpp  HmckResourceManager.h  HmckSwapChain.cpp  HmckSwapChain.h  HmckThreadPool.h  HmckVulkanInstance.cpp  HmckVulkanInstance.h
src/engine/io/: HmckInputHandler.cpp  HmckInputHandler.h  HmckUserInterface.cpp  HmckUserInterface.h  HmckWindow.cpp  HmckWindow.h  KeyboardMovementController.h
src/engine/platform/: HmckKeycodes.h  HmckWindow.cpp  HmckWindow.h
src/engine/platform/win32/: resources.rc
src/engine/resources/: HmckBuffer.cpp  HmckBuffer.h  HmckDescriptors.h  HmckGenerator.cpp  HmckGenerator.h  HmckHDR.cpp  HmckHDR.h  HmckResourceHandle.h  HmckTexture.cpp  HmckTexture.h
src/engine/scene/: HmckAssetDelivery.cpp  HmckAssetDelivery.h  HmckCamera.cpp  HmckCamera.h  HmckEntity.cpp  HmckEntity.h  HmckEntity3D.h  HmckEntityComponents.h  HmckGLTF.cpp  HmckGLTF.h  HmckGeometry.cpp  HmckGeometry.h  HmckLights.cpp  HmckLights.h  HmckScene.cpp  HmckScene.h  HmckState.cpp  HmckState.h  HmckVertex.h
src/engine/shaders/: HmckShader.h
src/engine/shaders/compiled/: blur.frag.spv  default_forward.frag.spv  default_forward.vert.spv  environment.frag.spv  fullscreen.vert.spv  gbuffer.frag.spv  gbuffer.vert.spv  generate_brdflut.frag.spv  generate_irradiancemap.frag.spv  generate_prefilteredmap.frag.spv  light_pass.frag.spv  light_pass.vert.spv  pbr_deferred.frag.spv  pbr_ibl_deferred.frag.spv  raymarch_pb.frag.spv  raymarch_pretty.frag.spv  shadowmap.frag.spv  shadowmap.vert.spv  ssao.frag.spv  transparency_pass.frag.spv
src/engine/shaders/raw/: 3d.frag  environment.frag  fullscreen.vert  gbuffer.frag  generate_irradiancemap.frag  generate_prefilteredmap.frag  pbr_ibl_deferred.frag  raymarch_3d_texture.frag  shadowmap.frag  wboitbuffer.frag
src/engine/shaders/raw/common/: consts.glsl  functions.glsl  global_binding.glsl  projection_binding.glsl  types.glsl
src/engine/shaders/raw/glsl/: environment.frag  gbuffer.frag  generate_irradiancemap.frag  generate_prefilteredmap.frag  pbr_deferred.frag  pbr_ibl_deferred.frag  raymarch_3d_texture.frag  raymarch_pb.frag  ssao.frag  transparency_pass.frag
src/engine/systems/: HmckUserInterface.cpp  HmckUserInterface.h
src/engine/utils/: HmckBenchmarkRunner.h  HmckEventEmitter.h  HmckLogger.h  HmckThreadPool.h  HmckUserInterface.cpp  HmckUserInterface.h  HmckUtils.h
src/hammock/core/: Buffer.cpp  CMakeLists.txt  ComputePipeline.cpp  Device.cpp  DeviceStorage.cpp  FrameManager.cpp  GraphicsPipeline.cpp  Image.cpp  Raytracing.cpp  RenderContext.cpp  RenderGraph.cpp  RenderPass.cpp  Resource.cpp  ResourceManager.cpp  SwapChain.cpp  VmaUsage.cpp  VulkanInstance.cpp
src/hammock/legacy/: Buffer.cpp  CMakeLists.txt  DeviceStorage.cpp  Texture.cpp
src/hammock/platform/: CMakeLists.txt  Window.cpp
src/hammock/resources/: Buffer.cpp  CMakeLists.txt  Descriptors.cpp  Generator.cpp  Texture.cpp
src/hammock/scene/: AssetDelivery.cpp  CMakeLists.txt  Camera.cpp  Geometry.cpp
src/hammock/shaders/raw/: 3d.frag  cloud_composition.frag  clouds.comp  environment.frag  frostbite.frag  fullscreen.frag  gbuffer.vert  lambert_forward.frag  lambert_forward.vert  marching_cubes.frag  marching_cubes.vert  noise.comp  raymarch_3d_texture.frag  raytrace.comp  rendergraph.frag  rendergraph.vert  sky.frag  sky_gradient.frag  texture.frag  texture3d.frag  volume.frag  volume.vert  volume_upsample.frag  wboitbuffer.frag
src/hammock/shaders/raw/common/: composition_binding.glsl  intersections.glsl  mesh_binding.glsl
src/hammock/utils/: CMakeLists.txt  UserInterface.cpp
tools/environment_maps_generator/: CMakeLists.txt  main.cpp
tools/generate_environment_maps/: CMakeLists.txt  main.cpp
(+221 files in other folders)
